# algo_stock_trading2

./: .gitignore  AGENTS.md  Makefile  PRD.md  README.md  TASKS.md  pyproject.toml  requirements.txt
.cursor/: hooks.json
.cursor/hooks/: guard-trading.sh  post-edit-python.sh  session-context.sh
.cursor/rules/: broker-layer.mdc  ci-cd.mdc  project-core.mdc  strategy-layer.mdc
.github/: pull_request_template.md
.github/workflows/: ci.yml
config/: settings.example.yaml
config/strategies/: bollinger_rsi.yaml  donchian_breakout.yaml  ema_crossover.yaml  momentum_rotation.yaml  sma_crossover.yaml  sma_crossover_1m.yaml
docs/: AUTOMATION.md  STRATEGY_GUIDE.md  TESTING.md  WATCHLIST.md
launchd/: com.myalgo2.daily.plist  com.myalgo2.monthly-report.plist  com.myalgo2.weekly-report.plist
scripts/: _cli.py  daily_run.sh  install_launchd.sh  monthly_report.sh  report.py  run_live.py  run_paper.py  run_tick.py  snapshot_account.py  status.py  sync_fills.py  weekly_report.sh
scripts/lib/: common.sh
src/: config.py  trading_policy.py
src/broker/: __init__.py  base.py  futu_broker.py
src/data/: __init__.py  bar_feed.py  subscription.py  tick_feed.py
src/engine/: bar_execution.py  runner.py
src/journal/: __init__.py  engine_hooks.py  paths.py  (+4 more)
tests/: strategy_helpers.py  test_bar_execution.py  test_bollinger_rsi.py  test_donchian_breakout.py  test_ema_crossover.py  test_indicators.py  test_journal.py  test_momentum_rotation.py  test_risk_guard.py  test_signal.py  test_sma_crossover.py  test_subscription.py  test_trading_policy.py  test_trading_session.py
(+20 files in other folders)
